--- a/server-movies/package.json
+++ b/server-movies/package.json
@@ -7,6 +7,7 @@
     "start": "node server.js",
     "dev": "nodemon",
     "poblar:movies": "node ./seeds./movies.seed.js",
+    "init-db": "node ./seeds/init-db.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
